Make scripts available in remote repositories when actions are used outside of operator repo
Signed-off-by: Jakub Stejskal <xstejs24@gmail.com>

--- a/.github/actions/dependencies/install-helm/action.yml
+++ b/.github/actions/dependencies/install-helm/action.yml
@@ -6,7 +6,7 @@ runs:
   steps:
     - name: Install helm
       shell: bash
-      run: ".azure/scripts/setup-helm.sh"
+      run: "${{ github.action_path }}/../../../../.azure/scripts/setup-helm.sh"
       env:
         # TODO - update versions in the upcoming PRs
         TEST_HELM3_VERSION: v3.15.4
