--- a/.github/actions/dependencies/install-shellcheck/action.yml
+++ b/.github/actions/dependencies/install-shellcheck/action.yml
@@ -13,4 +13,4 @@ runs:
     - name: Install shellcheck
       shell: bash
       run: |
-        .azure/scripts/setup_shellcheck.sh "${{ inputs.architecture }}"
+        ${{ github.action_path }}/../../../../.azure/scripts/setup_shellcheck.sh "${{ inputs.architecture }}"
