--- a/.github/actions/dependencies/setup-minikube/action.yml
+++ b/.github/actions/dependencies/setup-minikube/action.yml
@@ -45,7 +45,7 @@ runs:
     - name: Setup Minikube
       shell: bash
       run: |
-        ./.azure/scripts/setup-kubernetes.sh "${{ inputs.architecture }}"
+        ${{ github.action_path }}/../../../../.azure/scripts/setup-kubernetes.sh "${{ inputs.architecture }}"
 
       env:
         TEST_CLUSTER: minikube
