--- a/api/src/test/resources/crds/v1beta2/044-Crd-kafkauser.yaml
+++ b/api/src/test/resources/crds/v1beta2/044-Crd-kafkauser.yaml
@@ -179,7 +179,7 @@ spec:
                     type: number
                     minimum: 0
                     description: "A quota on the rate at which mutations are accepted for the create topics request, the create partitions request and the delete topics request. The rate is accumulated by the number of partitions created or deleted."
-                description: Quotas on requests to control the broker resources used by clients. Network bandwidth and request rate quotas can be enforced.Kafka documentation for Kafka User quotas can be found at http://kafka.apache.org/documentation/#design_quotas.
+                description: "Quotas on requests to control the broker resources used by clients. Network bandwidth and request rate quotas can be enforced. For more information, see the Apache Kafka design documentation about quotas."
               template:
                 type: object
                 properties:
