Add support for configuring `hostUsers` through template and Pod Security Providers - Closes #11385
Signed-off-by: Jakub Scholz <www@scholzj.com>

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -74,6 +74,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.github.spotbugs</groupId>
+            <artifactId>spotbugs-annotations</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.quartz-scheduler</groupId>
             <artifactId>quartz</artifactId>
             <scope>test</scope>
