--- a/api/src/test/resources/crds/v1beta2/041-Crd-kafkaconnect.yaml
+++ b/api/src/test/resources/crds/v1beta2/041-Crd-kafkaconnect.yaml
@@ -952,6 +952,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   apiService:
                     type: object
                     properties:
@@ -1937,6 +1939,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   buildContainer:
                     type: object
                     properties:
@@ -3343,6 +3347,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   apiService:
                     type: object
                     properties:
@@ -4328,6 +4334,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   buildContainer:
                     type: object
                     properties:
