--- a/api/src/test/resources/crds/v1beta2/045-Crd-kafkanodepool.yaml
+++ b/api/src/test/resources/crds/v1beta2/045-Crd-kafkanodepool.yaml
@@ -821,6 +821,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   perPodService:
                     type: object
                     properties:
@@ -2009,6 +2011,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   perPodService:
                     type: object
                     properties:
