--- a/api/src/test/resources/crds/v1beta2/046-Crd-kafkabridge.yaml
+++ b/api/src/test/resources/crds/v1beta2/046-Crd-kafkabridge.yaml
@@ -973,6 +973,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   apiService:
                     type: object
                     properties:
@@ -2411,6 +2413,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   apiService:
                     type: object
                     properties:
