--- a/api/src/test/resources/crds/v1beta2/048-Crd-kafkamirrormaker2.yaml
+++ b/api/src/test/resources/crds/v1beta2/048-Crd-kafkamirrormaker2.yaml
@@ -1150,6 +1150,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   apiService:
                     type: object
                     properties:
@@ -2135,6 +2137,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   buildContainer:
                     type: object
                     properties:
@@ -3969,6 +3973,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   apiService:
                     type: object
                     properties:
@@ -4954,6 +4960,8 @@ spec:
                               persistentVolumeClaim: {}
                               csi: {}
                               image: {}
+                      hostUsers:
+                        type: boolean
                   buildContainer:
                     type: object
                     properties:
