--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/crds/040-Crd-kafka.yaml
@@ -1071,6 +1071,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         bootstrapService:
                           type: object
                           properties:
@@ -2544,6 +2546,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         topicOperatorContainer:
                           type: object
                           properties:
@@ -3680,6 +3684,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         apiService:
                           type: object
                           properties:
@@ -4704,6 +4710,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         container:
                           type: object
                           properties:
@@ -6340,6 +6348,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         bootstrapService:
                           type: object
                           properties:
@@ -7766,6 +7776,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         clientService:
                           type: object
                           properties:
@@ -9022,6 +9034,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         topicOperatorContainer:
                           type: object
                           properties:
@@ -10372,6 +10386,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         apiService:
                           type: object
                           properties:
@@ -11530,6 +11546,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         container:
                           type: object
                           properties:
@@ -12404,6 +12422,8 @@ spec:
                                       persistentVolumeClaim: {}
                                       csi: {}
                                       image: {}
+                            hostUsers:
+                              type: boolean
                         service:
                           type: object
                           properties:
