Add optional networkPolicy for the strimzi-operator
Signed-off-by: Pat Riehecky <riehecky@fnal.gov>

--- a/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
+++ b/packaging/helm-charts/helm3/strimzi-kafka-operator/values.yaml
@@ -78,6 +78,27 @@ podDisruptionBudget:
   maxUnavailable:
   unhealthyPodEvictionPolicy: IfHealthyBudget
 
+operatorNetworkPolicy:
+  # If enabled, this will generate a networkPolicy for the strimzi-operator.
+  # This flag DOES NOT control operator generated networkPolicies!
+  # This flag ONLY controls access for the strimzi-operator deployment.
+  enabled: false
+  # For ingress we permit access to the metrics endpoint
+  ingress:
+  - ports:
+    - protocol: TCP
+      port: http
+  # The operator must communicate with DNS, the Kubernetes API server,
+  # and all managed Kafka components.
+  #
+  # Kafka components use numerous, configurable ports and may exist in
+  # "arbitrary" namespaces. This makes a generic egress NetworkPolicy
+  # impractical to define. Thus we set `{}` an unrestrictred value.
+  #
+  # Any meaningful network restrictions must be defined per cluster,
+  # with a full knowledge of the Kafka topology and port configuration.
+  egress: {}
+
 # If you are using the grafana dashboard sidecar,
 # you can import some default dashboards here
 dashboards:
