Upgraded SLF4J to SLF4J2 to fix test cases
Signed-off-by: Shubham Kalloli <shubham.kalloli@est.tech>

--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
         <yammer-metrics.version>2.2.0</yammer-metrics.version>
         <zookeeper.version>3.8.5</zookeeper.version>
         <snappy.version>1.1.10.5</snappy.version>
-        <slf4j.version>1.7.36</slf4j.version>
+        <slf4j.version>2.0.17</slf4j.version>
         <log4j.version>2.25.3</log4j.version>
         <quartz.version>2.3.2</quartz.version>
         <opentelemetry.version>1.34.1</opentelemetry.version>
@@ -409,7 +409,7 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.logging.log4j</groupId>
-                <artifactId>log4j-slf4j-impl</artifactId>
+                <artifactId>log4j-slf4j2-impl</artifactId>
                 <version>${log4j.version}</version>
             </dependency>
             <dependency>
