--- a/pom.xml
+++ b/pom.xml
@@ -110,7 +110,7 @@
         <opentest4j.version>1.2.0</opentest4j.version>
         <jupiter.version>6.0.0</jupiter.version>
         <strimzi-test-container.version>0.114.0</strimzi-test-container.version>
-        <mockserver.version>5.13.2</mockserver.version>
+        <wiremock.version>3.13.2</wiremock.version>
         <valid4j.version>1.1</valid4j.version>
         <javax.json.version>1.1.4</javax.json.version>
         <bouncycastle.version>1.78.1</bouncycastle.version>
